--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -64,12 +64,11 @@ header ul {
 
 .nav > ul a:any-link {
   padding: 1rem;
-  opacity: 0.75;
 }  
 
 .nav > ul a:any-link:hover,
 .nav > ul a.selected:any-link {
-  opacity: 1;
+  color: var(--selected);
   text-decoration: underline;
 }
 
