--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@ html {
   --nav: #9F3219;
   --heading: #862B13;
   --highlight: #F9C743;
+  --selected: #F9D46C;
   --background: #c0b69f;
 }
 
